--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
   <script type="text/javascript" src="js/phaser.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/player.js"></script>
+  <script type="text/javascript" src="js/weapons.js"></script>
+  <script type="text/javascript" src="js/enemy.js"></script>
+  <script type="text/javascript" src="js/enemyWalker.js"></script>
+  <script type="text/javascript" src="js/enemyStatic.js"></script>
+  <script type="text/javascript" src="js/enemyFlyer.js"></script>
 </head>
 
 <body>
