level representatin and loading

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </style>
 
   <script type="text/javascript" src="js/phaser.min.js"></script>
+  <script type="text/javascript" src="js/level.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/weapons.js"></script>
