--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script type="text/javascript" src="js/enemyStatic.js"></script>
   <script type="text/javascript" src="js/enemyShooter.js"></script>
   <script type="text/javascript" src="js/enemyFlyer.js"></script>
+  <script type="text/javascript" src="js/bossToy.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/weapons.js"></script>
