--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     }
   </style>
 
-  <script type="text/javascript" src="js/phaser.min.js"></script>
   <script type="text/javascript" src="js/level.js"></script>
+  <script type="text/javascript" src="js/levels/level1.js"></script>
+  <script type="text/javascript" src="js/phaser.min.js"></script>
   <script type="text/javascript" src="js/enemy.js"></script>
   <script type="text/javascript" src="js/enemyWalker.js"></script>
   <script type="text/javascript" src="js/enemyStatic.js"></script>
