--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/weapons.js"></script>
+  <script type="text/javascript" src="js/itemType.js"></script>
 </head>
 
 <body>
